feat: add experience , about section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
+                    <li><a href="#experience">Experience</a></li>
                     <li><a href="#project">Project</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -35,15 +36,92 @@
             <div class="overlay"></div>
             <div class="text">
                 <div class="text-detail">
-                    <p>Hi, I'm</p>
+                    <p>Hello, I'm</p>
                     <h1>Benardo</h1>
-                    <h1>Software Engineer</h1>
+                    <h1 class="glow-text">Software Engineer</h1>
                     <div>
-                        <button>Download CV</button>
-                        <button>View LinkedIn</button>
+                        <button class="btn">Download CV</button>
+                        <button class="btn btn-secondary">View LinkedIn</button>
                     </div>
                 </div>
             </div>
         </div>
+
+        <section id="about" class="about">
+            <div class="container">
+                <h2 class="section-title">ABOUT ME</h2>
+                
+                <div class="about-text">
+                    <p>I am currently a 5th-semester student at Institut Teknologi Bandung, pursuing a degree in Computer Science with a strong passion for software engineering. Over the past few years, I have gained substantial experience working in teams, collaborating with talented individuals to develop a variety of projects that have sharpened my technical and problem-solving skills. My drive for continuous learning and improvement has fueled my ambition to explore new challenges in software development.</p>
+                    <p>I am known for my determination and never-give-up attitude, which motivates me to overcome obstacles and strive for excellence in everything I do. I thrive on challenges, consistently pushing myself to grow and take responsibility for my work. I am committed to not only achieving success in my academic and professional endeavors but also contributing meaningfully to any team I am part of.</p>
+                </div>
+
+            </div>
+        </section>
+
+        <section id="experiment" class="experiment">
+            <div class="container">
+                <h2 class="section-title">EXPERIENCE</h2>
+                
+                <div class="timeline">
+                    <div class="timeline-item right">
+                        <div class="timeline-content right2">
+                            <h2>Aug 2024 - Present</h2>
+                            <h3>Full Stack Developer</h3>
+                            <p>Cultination</p>
+                            <p>Ensure the server works well, make a maintennace for the backend server, hosting to VPS, develop admin dashboard for the company</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item left">
+                        <div class="timeline-content left2">
+                            <h2>Jul 2024 - Aug 2024</h2>
+                            <h3>Backend Developer</h3>
+                            <p>OSKM ITB 2024</p>
+                            <p>In a group of 5 people , develop a website for welcoming 2024 batch student, using TRPC, typescript, Socket.io to build chat system server for the website</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item right">
+                        <div class="timeline-content right2">
+                            <h2>Jun 2024 - Jul 2024</h2>
+                            <h3>Backend Developer</h3>
+                            <p>Sparta 2024</p>
+                            <p>In a group of 3 people , develop a website for prospect new Informatics major students , using Go Programming Language to build server api</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item left">
+                        <div class="timeline-content left2">
+                            <h2>Mar 2024 - Apr 2024</h2>
+                            <h3>Web Developer</h3>
+                            <p>Skill Up</p>
+                            <p>In a group of 12 people , develop a website for Skill Up organization that provide several course for skill upgrade , using Next js ,Tailwind CSS, Shadcn to build several page like login page, signup page , course detail page, and others.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item right">
+                        <div class="timeline-content right2">
+                            <h2>Jan 2024 - Feb 2024</h2>
+                            <h3>Frontend Developer</h3>
+                            <p>ITB Fair</p>
+                            <p>In a group of 7 people , develop a website for welcoming new student , using Next js ,Tailwind CSS to build several page</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item left">
+                        <div class="timeline-content left2">
+                            <h2>Sept 2023 - Okt 2023</h2>
+                            <h3>Frontend Developer</h3>
+                            <p>Wisokto 2023</p>
+                            <p>In a group of 10 people , develop a website for graduation party , using Next js ,Tailwind CSS to build several page</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section id="project" class="project">
+            <div class="container">
+                <h2 class="section-title">PROJECT</h2>
+
+            </div>
+        </section>
     </body>
 </html>
