--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </label>
             <nav class="navbar">
                 <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="#hero">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#project">Project</a></li>
@@ -33,7 +33,7 @@
             </nav>
         </header>
 
-        <div class="hero">
+        <section class="hero" id="hero">
             <img src="ben3.png" alt="Benardo" class="hero-image">
             <div class="overlay"></div>
             <div class="text">
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <section id="about" class="about">
             <div class="container">
@@ -61,7 +61,7 @@
             </div>
         </section>
 
-        <section id="experiment" class="experiment">
+        <section id="experience" class="experience">
             <div class="container">
                 <h2 class="section-title">EXPERIENCE</h2>
                 
