refactor: delet unused command and file

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <div class="overlay"></div>
             <div class="text">
                 <div class="text-detail">
-                    <p>Hello, I'm</p>
-                    <h1>Benardo</h1>
-                    <h1 class="glow-text">Software Engineer</h1>
+                    <h1>Hello, I'm</h1>
+                    <h2>Benardo</h2>
+                    <h3 class="glow-text">Software Engineer</h3>
                     <div>
                         <button class="btn">Download CV</button>
                         <button class="btn btn-secondary">View LinkedIn</button>
@@ -446,7 +446,7 @@
                 <div class="footer-section">
                     <h3>Contact</h3>
                     <p>Email: benardo@gmail.com</p>
-                    <p>Phone: +1 (123) 456-7890</p>
+                    <p>Phone: +62 83198695691</p>
                 </div>
                 <div class="footer-section">
                     <h3>Follow Me</h3>
